# Financial-Intelligence

./: README.md  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: cc1fd9192b68_add_auth_table.py
backend/: README.md  notebook.ipynb
backend/alembic/versions/: 1d2172233b43_add_missing_fields_to_user.py  708b19b898ac_nivayu.py  8fe4c45e8b98_add_loans_table.py  a66cd799f6c2_add_category_to_loans.py  (+2 more)
backend/financial_intelligence/: database.py  models.py
backend/models/: model_20240617_184137_0  model_20240617_184137_1  model_20240617_184137_11  model_20240617_184137_19  model_20240617_184137_6  model_20240617_184137_7
backend/preprocessors/: cibil_score_scaler.pickle  commercial_assets_value_scaler.pickle  loan_term_scaler.pickle  luxury_assets_value_scaler.pickle  residential_assets_value_scaler.pickle
financial_intelligence/: __init__.py  config.py
financial_intelligence/auth/: __init__.py
financial_intelligence/loan_application/: schema.py
financial_intelligence/loans/: schema.py
financial_intelligence/user/: schema.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  constants.js  context.js  store.js  theme.js
frontend/src/routes/: loans.js  (+6 more)
models/: model_20240617_184137_10  model_20240617_184137_14  model_20240617_184137_15  model_20240617_184137_2  model_20240617_184137_3  model_20240617_184137_5  model_20240617_184137_8
preprocessors/: bank_asset_value_scaler.pickle  education_ohe.pickle  income_annum_scaler.pickle  loan_amount_scaler.pickle  num_dependant_scaler.pickle  self_employed_ohe.pickle
(+11 files in other folders)
